--- a/_config.yml
+++ b/_config.yml
@@ -8,14 +8,14 @@ highlighter: pygments
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : Jekyll Bootstrap
+title : WXYZG - Simply a Blog
 tagline: Site Tagline
-author :
-  name : Name Lastname
-  email : blah@email.test
-  github : username
-  twitter : username
-  feedburner : feedname
+author : 
+  name : Xiaoyu WEI
+  email : wxy0516@gmail.com
+  github : xywei
+  twitter : wxy0516@gmail.com
+  feedburner : http://feeds.feedburner.com/wxyzg/MpDB
 
 # The production_url is only used when full-domain names are needed
 # such as sitemap.txt 
@@ -25,7 +25,7 @@ author :
 # Else if you are pushing to username.github.io, replace with your username.
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
-production_url : http://username.github.io
+production_url : http://xywei.github.io
 
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
