Fixed twitter and rss link

--- a/_config.yml
+++ b/_config.yml
@@ -14,8 +14,8 @@ author :
   name : Xiaoyu WEI
   email : wxy0516@gmail.com
   github : xywei
-  twitter : wxy0516@gmail.com
-  feedburner : http://feeds.feedburner.com/wxyzg/MpDB
+  twitter : xxkwxy
+  feedburner : wxyzg/MpDB
 
 # The production_url is only used when full-domain names are needed
 # such as sitemap.txt 
